--- a/docroot/themes/custom/themekit/global/sass/base/_settings.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_settings.scss
@@ -121,11 +121,37 @@ $icons: (
   error: "\e000",
   info: "\e88e",
   settings: "\e8b8",
-  edit: "\e902",
-  trash: "\e903",
-  view: "\e905",
-  gear: "\e904",
-  clone: "\e906"
+  clone: "\e900",
+  edit: "\e901",
+  trash: "\e902",
+  gear: "\e903",
+  view: "\e904",
+  view: "\e904",
+  angle-bottom: "\e905",
+  angle-left: "\e906",
+  angle-right: "\e907",
+  arrow-right: "\e908",
+  close: "\e909",
+  commerce: "\e90a",
+  externallink: "\e90b",
+  facebook: "\e90c",
+  government: "\e90d",
+  health: "\e90e",
+  linkedin: "\e90f",
+  location: "\e910",
+  mail-add: "\e911",
+  mail: "\e912",
+  menu: "\e913",
+  nonprofit: "\e914",
+  phone: "\e915",
+  publishing: "\e916",
+  quote: "\e917",
+  search: "\e918",
+  social-linkedin: "\e919",
+  social-meetup: "\e91a",
+  social-twitter: "\e91b",
+  social-youtube: "\e91c",
+  sport: "\e91d",
 );
 /******* End Drupal Defaults *******/
 
