COD-1 - Init styles for base elements and typography elements

--- a/docroot/themes/custom/themekit/global/sass/base/_app.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_app.scss
@@ -15,7 +15,7 @@
 @import '../_vendor/sassy-lists/stylesheets/functions/to-list';
 
 // Sass utilities
-//@import 'util/util';
+@import 'util/util';
 
 // Global variables and styles
 //@import 'global';
