--- a/docroot/themes/custom/themekit/global/sass/framework/utils/_helpers.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/utils/_helpers.scss
@@ -286,3 +286,9 @@ $selector-groups: (
 @function last($list) {
   @return nth($list, length($list));
 }
+
+/// Transition helper mixin
+/// @param {List} $list - A list
+@mixin global-transition($property: all, $duration: $global-transition-duration, $timing-function: $global-transition-timing-function) {
+  transition: $property $duration $timing-function;
+}
