--- a/docroot/themes/custom/themekit/global/sass/global.scss
+++ b/docroot/themes/custom/themekit/global/sass/global.scss
@@ -1,9 +1,11 @@
 // All styles added by this theme.
-
 @import "base/base";
 
 // Foundation App
 @import 'base/app';
+
+// Typography
+@import "base/typography";
 
 // Animations
 @import 'base/animation';
@@ -13,4 +15,11 @@
 
 // Sitewide styles
 @import 'components/accessibility';
+@import 'components/buttons';
+@import 'components/links';
+//@import 'components/forms';
+//@import 'components/tabs';
+@import 'components/custom-blocks';
+@import 'components/navigations';
 @import 'components/svg';
+//@import 'components/pager';
