--- a/docroot/themes/custom/themekit/partials/node/type/page/node--page.html.twig
+++ b/docroot/themes/custom/themekit/partials/node/type/page/node--page.html.twig
@@ -8,18 +8,10 @@
     <h2{{ title_attributes }}>
       <a href="{{ url }}" rel="bookmark">{{ label }}</a>
     </h2>
+  {% else %}
+    <h1{{ title_attributes.addClass('node__title') }}>{{ node.label }}</h1>
   {% endif %}
   {{ title_suffix }}
-
-  {% if display_submitted %}
-    <footer class="node__meta">
-      {{ author_picture }}
-      <div{{ author_attributes.addClass('node__submitted') }}>
-        {% trans %}Submitted by {{ author_name }} on {{ date }}{% endtrans %}
-        {{ metadata }}
-      </div>
-    </footer>
-  {% endif %}
 
   <div{{ content_attributes.addClass('node__content') }}>
     {{ rendered_content }}
