COD-1 - Adjust base setiings, templates and styles

--- a/docroot/themes/custom/themekit/global/sass/base/_app.scss
+++ b/docroot/themes/custom/themekit/global/sass/base/_app.scss
@@ -116,7 +116,7 @@
 // Choose the styles that we actually want PRINTED into our stylesheets
 @include foundation-global-styles();
 @include foundation-typography();
-@include foundation-forms();
+//@include foundation-forms();
 @include foundation-table();
 
 @include themekit-icons();
