--- a/docroot/themes/custom/themekit/global/sass/global.scss
+++ b/docroot/themes/custom/themekit/global/sass/global.scss
@@ -18,7 +18,7 @@
 @import 'components/buttons';
 @import 'components/links';
 //@import 'components/forms';
-//@import 'components/tabs';
+@import 'components/tabs';
 @import 'components/custom-blocks';
 @import 'components/navigations';
 @import 'components/svg';
