--- a/docroot/themes/custom/themekit/partials/component/paragraph.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/paragraph.html.twig
@@ -49,14 +49,15 @@
 
 {%
   set classes = [
-  'paragraph',
-  'paragraph--type--' ~ paragraph.bundle|clean_class,
-  view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-  theme ? 'theme--' ~ theme|clean_class,
-]
+    'paragraph',
+    'paragraph--type--' ~ paragraph.bundle|clean_class,
+    view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
+    theme ? 'theme--' ~ theme|clean_class,
+  ]
 %}
 {{ attach_library('themekit/paragraph') }}
 {{ attach_library('themekit/component--' ~ paragraph.bundle|clean_class) }}
+{{ attach_library('themekit/component--' ~ paragraph.bundle|clean_class ~ '--' ~ view_mode|clean_class) }}
 
 <div{{ attributes.addClass(classes) }}>
   {% block content %}
