--- a/docroot/themes/custom/themekit/global/sass/framework/utils/_icons.scss
+++ b/docroot/themes/custom/themekit/global/sass/framework/utils/_icons.scss
@@ -4,8 +4,30 @@
 ////
 
 $icon-font-name: 'icomoon' !default;
-$icon-font-dir: '../../assets/fonts/icomoon/fonts/' !default;
+$icon-font-dir: '/assets/fonts/icomoon/fonts/' !default;
 $icons-enabled: false;
+
+%icon-base !optional {
+  font-family: $icon-font-name;
+  font-style: normal;
+  font-weight: normal;
+  speak: none;
+
+  display: inline-block;
+  text-decoration: inherit;
+  width: 1em;
+  text-align: center;
+
+  // For safety - reset parent styles, that can break glyph codes
+  font-variant: normal;
+  text-transform: none;
+
+  // Ensure consistent height
+  line-height: 1;
+
+  // Font smoothing. That was taken from TWBS
+  font-smoothing: antialiased;
+}
 
 @mixin themekit-icons() {
   @font-face {
@@ -17,28 +39,6 @@ $icons-enabled: false;
     url($icon-font-dir + $icon-font-name + '.svg?48442214#3xl') format('svg');
     font-weight: normal;
     font-style: normal;
-  }
-
-  %icon-base {
-    font-family: $icon-font-name;
-    font-style: normal;
-    font-weight: normal;
-    speak: none;
-
-    display: inline-block;
-    text-decoration: inherit;
-    width: 1em;
-    text-align: center;
-
-    // For safety - reset parent styles, that can break glyph codes
-    font-variant: normal;
-    text-transform: none;
-
-    // Ensure consistent height
-    line-height: 1;
-
-    // Font smoothing. That was taken from TWBS
-    font-smoothing: antialiased;
   }
 
   $icons-enabled: true !global;
