--- a/docroot/themes/custom/themekit/partials/component/block.html.twig
+++ b/docroot/themes/custom/themekit/partials/component/block.html.twig
@@ -29,31 +29,37 @@
 #}
 {%
   set classes = [
-  'block',
-  'block--' ~ configuration.provider|clean_class,
-  'block--' ~ plugin_id|clean_class,
-  block_type ? 'block--' ~ block_type|clean_class,
-  theme ? 'theme--' ~ theme|clean_class,
-  text_alignment ? 'block--text-align--' ~ text_alignment|clean_class,
-  attributes.id
-]
+    'block',
+    'block--' ~ configuration.provider|clean_class,
+    'block--' ~ plugin_id|clean_class,
+    block_type ? 'block--' ~ block_type|clean_class,
+    theme ? 'theme--' ~ theme|clean_class,
+    text_alignment ? 'block--text-align--' ~ text_alignment|clean_class,
+    attributes.id
+  ]
 %}
 
+{% set bundle = block_type ? block_type : plugin_id %}
+
 {{ attach_library('themekit/block') }}
-{{ attach_library('themekit/component--' ~ block_type|clean_class) }}
-<div{{ attributes.addClass(classes) }}>
+{{ attach_library('themekit/component--' ~ bundle|clean_class) }}
+
+<div{{ attributes.addClass(classes).setAttribute('id', 'block--' ~ plugin_id|clean_id ~ '-' ~ counter) }}>
   {% if uuid %}
   <div id="{{ 'block-' ~ uuid|clean_id }}">
-    {% else %}
-    <div>
-      {% endif %}
-      {{ title_prefix }}
-      {% if label %}
-        <h2{{ title_attributes }}>{{ label }}</h2>
-      {% endif %}
-      {{ title_suffix }}
-      {% block content %}
-        {{ content }}
-      {% endblock %}
-    </div>
+    {% endif %}
+
+    {{ title_prefix }}
+    {% if label %}
+      <h2{{ title_attributes.addClass('block__title') }}>{{ label }}</h2>
+    {% endif %}
+    {{ title_suffix }}
+
+    {% block content %}
+      {{ content }}
+    {% endblock %}
+
+    {% if uuid %}
   </div>
+  {% endif %}
+</div>
